# orchemist-skills

./: .gitignore  CHANGELOG.md  LICENSE  MAINTAINERS.md  README.md  install.sh  package.json  pyproject.toml
.github/workflows/: retro-loop-quarterly.yml
agents/: orchemist-adversary.md  orchemist-implementer.md  orchemist-tester.md
docs/: tiering-profiles.md
docs/retro/: CONSUMERS.txt  RETROSPECTIVE-TEMPLATE.md
examples/: example-issue.md  example-strip.md
pipelines/: coding-pipeline-maintenance.yaml  coding-pipeline-skip-spec.yaml  coding-pipeline-standard.yaml  comic-strip-pipeline.yaml  content-pipeline.yaml
profiles/: tiering-profiles.yaml
scripts/: retro-loop-quarterly.sh
skills/: orchemist-acceptance-run.md  orchemist-acceptance-test.md  orchemist-adversary.md  orchemist-apply-fixes.md  orchemist-behavioral.md  orchemist-draft.md  orchemist-existing-symbols-inventory.md  orchemist-fact-check.md  orchemist-fix.md  orchemist-implement.md  orchemist-red-team.md  orchemist-research.md  orchemist-review.md  orchemist-run.md  orchemist-spec.md  orchemist-test.md
tests/: README.md  conftest.py  test_all_pipelines_render_smoke.py  test_content_pipeline.py  test_skip_spec_dedup_parity.py  test_spec_adversary_7e_intra_symbol.py  test_tiering_profiles.py  test_wave_content_mode.py  tiering_profiles.py
tests/fixtures/: spec-with-intra-duplication.md
workflows/: README.md  orchemist-wave.js
